--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 /* Caixa central */
 #modal-nome .modal-content {
-  background: rgba(48, 0, 72, 0.95); /* roxo escuro sólido */
+background-color: rgba(75, 0, 130, 0.35);
   padding: 20px;                     /* reduzi um pouco pra não ficar tão alto */
   border-radius: 0;                  /* quadrado */
   border: 0.5px solid rgba(200, 200, 200, 0.2); /* cinza claro, translúcido e bem fino */
