--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ background-color: rgba(75, 0, 130, 0.35);
   font-size: 1.2rem;
   color: #fff;
   text-align: center;
+  font-family: 'Roboto', sans-serif; /* alternativa genérica */
 }
 
 /* Input */
