--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ background-color: rgba(75, 0, 130, 0.35);
   background-color: rgba(20,20,20,0.6); /* fundo levemente transparente */
   color: white;
   border-radius: none;
-  border: 0.1px solid rgba(255,255,255,0.25); /* borda bem fina e translúcida */
-  outline: none;
+border: 1px solid rgba(255, 255, 255, 0.2);  outline: none;
   width: 140px;
   font-size: 1rem;
   font-family: 'Inter', sans-serif;
@@ -258,6 +257,10 @@ background-blend-mode: overlay;
     text-shadow: 0 0 10px #cc00ff, 0 0 18px #00ffff, 0 0 24px #ff00cc;
     transform: scale(1.03);
   }
+}
+#chat-messages {
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.95rem; /* opcional: ajustar tamanho */
 }
 
 .nome-que-me-respondeu {
@@ -885,7 +888,7 @@ position: relative;
 position: relative;
   display: none;
   padding: 2rem;
-  padding-top: 20rem;
+  padding-top: 35rem;
   min-height: 100vh;
   text-align: center;
 
