--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@ position: relative;
   -webkit-backdrop-filter: blur(4px);
 
   /* borda inferior sutil */
-border-bottom: 1px solid rgba(0,0,0,0.05);
+border-bottom: none;
 
   /* curva só nas pontas de baixo */
   border-radius: 0 0 40px 40px;
