--- a/index.html
+++ b/index.html
@@ -1464,27 +1464,33 @@ background-color: rgba(75, 0, 130, 0.35);  border-radius: 0;
 
 <div class="video-card" 
      onclick="abrirModal('https://drive.google.com/file/d/1SMoyOaJ0swynUeJGxTYi_BNDbgsID30x/preview')" 
-     style="background-image: url('https://via.placeholder.com/260x140.png?text=Minha+Capa');">
+     style="background-image: url('https://media.discordapp.net/attachments/1326697236771635234/1410240505085689986/Picsart_25-08-27_14-31-56-696.jpg?ex=68b04c51&is=68aefad1&hm=b24a59ec5bda57b17569fdad1161af8c423e64c778e58b05ab9f9e6337f785ce&=&format=webp&width=1522&height=856');">
   <span class="video-title">Meu Vídeo no Drive</span>
 </div>
 
 <div class="video-card" 
      onclick="abrirModal('https://www.youtube.com/embed/kJQP7kiw5Fk')" 
-     style="background-image: url('https://img.youtube.com/vi/kJQP7kiw5Fk/hqdefault.jpg');">
+     style="background-image: url('https://media.discordapp.net/attachments/1326697236771635234/1410240505085689986/Picsart_25-08-27_14-31-56-696.jpg?ex=68b04c51&is=68aefad1&hm=b24a59ec5bda57b17569fdad1161af8c423e64c778e58b05ab9f9e6337f785ce&=&format=webp&width=1522&height=856');">
   <span class="video-title">Vídeo 3</span>
 </div>
 
-      <div class="video-card" onclick="abrirModal('https://www.youtube.com/embed/L_jWHffIx5E')" style="background-image: url('https://img.youtube.com/vi/L_jWHffIx5E/hqdefault.jpg');">
-        <span class="video-title">Vídeo 4</span>
-      </div>
+<div class="video-card" 
+     onclick="abrirModal('https://www.youtube.com/embed/kJQP7kiw5Fk')" 
+     style="background-image: url('https://media.discordapp.net/attachments/1326697236771635234/1410240505085689986/Picsart_25-08-27_14-31-56-696.jpg?ex=68b04c51&is=68aefad1&hm=b24a59ec5bda57b17569fdad1161af8c423e64c778e58b05ab9f9e6337f785ce&=&format=webp&width=1522&height=856');">
+  <span class="video-title">Vídeo 3</span>
+</div>
 
-      <div class="video-card" onclick="abrirModal('https://www.youtube.com/embed/OPf0YbXqDm0')" style="background-image: url('https://img.youtube.com/vi/OPf0YbXqDm0/hqdefault.jpg');">
-        <span class="video-title">Vídeo 5</span>
-      </div>
+<div class="video-card" 
+     onclick="abrirModal('https://www.youtube.com/embed/kJQP7kiw5Fk')" 
+     style="background-image: url('https://media.discordapp.net/attachments/1326697236771635234/1410240505085689986/Picsart_25-08-27_14-31-56-696.jpg?ex=68b04c51&is=68aefad1&hm=b24a59ec5bda57b17569fdad1161af8c423e64c778e58b05ab9f9e6337f785ce&=&format=webp&width=1522&height=856');">
+  <span class="video-title">Vídeo 3</span>
+</div>
 
-      <div class="video-card" onclick="abrirModal('https://www.youtube.com/embed/tVj0ZTS4WF4')" style="background-image: url('https://img.youtube.com/vi/tVj0ZTS4WF4/hqdefault.jpg');">
-        <span class="video-title">Vídeo 6</span>
-      </div>
+<div class="video-card" 
+     onclick="abrirModal('https://www.youtube.com/embed/kJQP7kiw5Fk')" 
+     style="background-image: url('https://media.discordapp.net/attachments/1326697236771635234/1410240505085689986/Picsart_25-08-27_14-31-56-696.jpg?ex=68b04c51&is=68aefad1&hm=b24a59ec5bda57b17569fdad1161af8c423e64c778e58b05ab9f9e6337f785ce&=&format=webp&width=1522&height=856');">
+  <span class="video-title">Vídeo 3</span>
+</div>
 
     </div>
 
