--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ position: relative;
 
   background-image:
     linear-gradient(to bottom, rgba(20, 0, 40, 0.8) 55%, rgba(40, 0, 70, 0.98) 85%),
-    url("https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp");
+    url("https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-08-27_14-47-39-194.jpg");
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
