--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30 (1).webp">
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp">
   <style>
+/* Vídeo de fundo em tela cheia */
+#bg-video {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  filter: brightness(0.55);
+}
+
+/* Overlay que escurece e fica roxo ao descer */
+#bg-overlay {
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  z-index: 0;
+
+  background: linear-gradient(to bottom,
+    rgba(0,0,0,0) 0%,                  /* topo transparente */
+    rgba(0,0,0,0) 75%,                 /* até 75% nada */
+    rgba(48,0,72,0.0) 75%,             /* começa a transição */
+    rgba(48,0,72,0.8) 85%,             /* em 85% já chegou no roxo */
+    rgba(48,0,72,0.8) 100%             /* últimos 15% roxo sólido */
+  );
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+
+
+
+
+
+
+/* Garante que os contêineres principais fiquem acima do vídeo e sem fundos antigos */
+#site-content, #episodio-page, #login-container, #register-container{
+  position: relative;
+  z-index: 1;
+  background: transparent !important;
+  background-image: none !important;
+}
+
 /* Fundo do modal */
 #modal-nome {
   position: fixed;
@@ -1142,6 +1186,12 @@ background-color: rgba(75, 0, 130, 0.35);  border-radius: 0;
   </style>
 </head>
 <body>
+<video id="bg-video" autoplay muted loop playsinline preload="auto"
+       poster="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/images/BigBuckBunny.jpg">
+  <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+</video>
+<div id="bg-overlay"></div>
+
 
 <!-- Página do Episódio -->
 <div id="episodio-page" style="display:none; padding:20px; text-align:center;">
@@ -1152,6 +1202,7 @@ background-color: rgba(75, 0, 130, 0.35);  border-radius: 0;
   </button>
 
   <h1 id="episodio-titulo">Episódio</h1>
+
 
   <!-- player -->
   <div style="max-width:900px; margin:auto;">
@@ -2792,12 +2843,69 @@ window.addEventListener("scroll", () => {
   } else {
     topBar.classList.remove("scrolled");
   }
+
+  const overlay = document.getElementById("bg-overlay");
+  if (!overlay) return;
+
+  const scrollY = window.scrollY;
+  const maxScroll = document.body.scrollHeight - window.innerHeight;
+  const progress = Math.min(scrollY / maxScroll, 1);
+
+  const startPercent = 75;     // ponto inicial do roxo
+  const transitionHeight = 15; // altura da transição em % (mais suave)
+  
+  // Posição onde começa o roxo sólido
+  const purpleStart = startPercent - startPercent * progress;
+  const transitionStart = purpleStart;
+  const transitionEnd = Math.min(purpleStart + transitionHeight, 100);
+
+  overlay.style.background = `
+    linear-gradient(to bottom,
+      rgba(0,0,0,0) 0%,                  /* topo transparente */
+      rgba(48,0,72,0.0) ${transitionStart}%, /* começa a transição */
+      rgba(48,0,72,1) ${transitionEnd}%,     /* roxo sólido escuro */
+      rgba(48,0,72,1) 100%)
+  `;
+
+  overlay.style.backdropFilter = "blur(4px)";
+  overlay.style.webkitBackdropFilter = "blur(4px)";
 });
+
 
 // expõe globalmente
 window.abrirEpisodio = abrirEpisodio;
 window.voltarEpisodio = voltarEpisodio;
 window.pularEpisodio = pularEpisodio;
+
+  const bgVideo = document.getElementById("bg-video");
+
+  // começa o vídeo 2s depois que a página carregar
+  window.addEventListener("load", () => {
+    setTimeout(() => {
+      bgVideo.muted = true;
+      bgVideo.play().catch(err => console.log("⚠️ Autoplay bloqueado:", err));
+    }, 2000); // ⏳ 2s delay para iniciar
+  });
+
+  function liberarSom() {
+    setTimeout(() => {
+      bgVideo.muted = false;
+      bgVideo.volume = 0.2; // 🔉 volume bem baixo (20%)
+      bgVideo.play().catch(err => console.log("⚠️ Autoplay bloqueado:", err));
+    }, 2000); // ⏳ 2s delay para o áudio também
+     
+    // remove os listeners depois da primeira interação
+    document.removeEventListener("click", liberarSom);
+    document.removeEventListener("scroll", liberarSom);
+    document.removeEventListener("mousemove", liberarSom);
+    document.removeEventListener("mouseover", liberarSom);
+  }
+
+  // ativa som na primeira interação
+  document.addEventListener("click", liberarSom);
+  document.addEventListener("scroll", liberarSom);
+  document.addEventListener("mousemove", liberarSom);
+  document.addEventListener("mouseover", liberarSom);
   </script>
 <div id="video-modal" class="video-modal">
   <div class="modal-content">
