--- a/index.html
+++ b/index.html
@@ -2837,39 +2837,42 @@ function atualizarControles() {
   btnPular.style.display = episodioAtual === totalEpisodios ? "none" : "inline-block";
 }
 
+const overlay = document.getElementById("bg-overlay");
+const firstCard = document.querySelector(".card:first-child");
+
 window.addEventListener("scroll", () => {
-  const overlay = document.getElementById("bg-overlay");
-  if (!overlay) return;
+  if (!overlay || !firstCard) return;
 
   const scrollY = window.scrollY;
-  const maxScroll = document.body.scrollHeight - window.innerHeight;
-  const progress = Math.min(scrollY / maxScroll, 1);
+  const viewportHeight = window.innerHeight;
 
-  const startPercent = 65;     // ponto inicial do roxo
-  const transitionHeight = 15; // altura da transição em %
+  // ponto fixo que queremos manter visualmente (meio do primeiro card)
+  const cardMiddle = firstCard.offsetTop + firstCard.offsetHeight / 2;
 
-  // Calcula o topo e o fundo da transição
-  const purpleStart = startPercent - startPercent * progress;
-  const transitionStart = purpleStart;
-  const transitionEnd = Math.min(purpleStart + transitionHeight, 100);
-  
-  // Mantém a mesma proporção na parte de baixo
-  const bottomStart = 100 - (100 - transitionEnd);
-  const bottomEnd = 100; // sempre até 100%
+  // converte para %
+  const fixedTopPercent = (cardMiddle / viewportHeight) * 100;
+
+  // quanto o usuário rolou em relação a esse ponto
+  const progress = Math.min(scrollY / viewportHeight, 1);
+
+  const transitionHeight = 15;
+
+  // ajusta o início e fim do roxo com base no scroll
+  const start = fixedTopPercent - progress * fixedTopPercent;
+  const end = Math.min(start + transitionHeight, 100);
 
   overlay.style.background = `
     linear-gradient(to bottom,
-      rgba(0,0,0,0) 0%,                  /* topo transparente */
-      rgba(48,0,72,0.0) ${transitionStart}%, /* transição topo */
-      rgba(48,0,72,1) ${transitionEnd}%,     /* roxo sólido topo */
-      rgba(48,0,72,1) ${bottomStart}%,       /* roxo sólido fundo proporcional */
-      rgba(48,0,72,1) ${bottomEnd}%          /* fundo sólido */
+      rgba(0,0,0,0) 0%,
+      rgba(48,0,72,0.0) ${start}%,
+      rgba(48,0,72,1) ${end}%,
+      rgba(48,0,72,1) 100%
     )
   `;
-
   overlay.style.backdropFilter = "blur(4px)";
   overlay.style.webkitBackdropFilter = "blur(4px)";
 });
+
 
 
 
