--- a/index.html
+++ b/index.html
@@ -2827,16 +2827,6 @@ function pularEpisodio() {
   }
 }
 
-function atualizarControles() {
-  const btnVoltar = document.getElementById("btn-voltar-ep");
-  const btnPular = document.getElementById("btn-pular-ep");
-
-  // se estiver no primeiro episódio, esconde o botão voltar
-  btnVoltar.style.display = episodioAtual === 1 ? "none" : "inline-block";
-  // se estiver no último episódio, esconde o botão pular
-  btnPular.style.display = episodioAtual === totalEpisodios ? "none" : "inline-block";
-}
-
 const overlay = document.getElementById("bg-overlay");
 const firstCard = document.querySelector(".card:first-child");
 
@@ -2846,32 +2836,29 @@ window.addEventListener("scroll", () => {
   const scrollY = window.scrollY;
   const viewportHeight = window.innerHeight;
 
-  // ponto fixo que queremos manter visualmente (meio do primeiro card)
+  // Ponto fixo do topo do roxo (meio do primeiro card)
   const cardMiddle = firstCard.offsetTop + firstCard.offsetHeight / 2;
-
-  // converte para %
   const fixedTopPercent = (cardMiddle / viewportHeight) * 100;
 
-  // quanto o usuário rolou em relação a esse ponto
-  const progress = Math.min(scrollY / viewportHeight, 1);
-
-  const transitionHeight = 15;
-
-  // ajusta o início e fim do roxo com base no scroll
-  const start = fixedTopPercent - progress * fixedTopPercent;
+  // Faz o gradiente subir com o scroll, mas mantendo o topo visual fixo
+  const progress = Math.min(scrollY / viewportHeight, 1); // valor 0 a 1
+  const start = fixedTopPercent - fixedTopPercent * progress; 
+  const transitionHeight = 20; // altura do roxo sólido
   const end = Math.min(start + transitionHeight, 100);
 
   overlay.style.background = `
     linear-gradient(to bottom,
       rgba(0,0,0,0) 0%,
       rgba(48,0,72,0.0) ${start}%,
-      rgba(48,0,72,1) ${end}%,
-      rgba(48,0,72,1) 100%
+      rgba(48,0,72,0.85) ${end}%,
+      rgba(48,0,72,0.85) 100%
     )
   `;
+
   overlay.style.backdropFilter = "blur(4px)";
   overlay.style.webkitBackdropFilter = "blur(4px)";
 });
+
 
 
 
