--- a/index.html
+++ b/index.html
@@ -2831,27 +2831,32 @@ const overlay = document.getElementById("bg-overlay");
 const firstCard = document.querySelector(".card:first-child");
 
 window.addEventListener("scroll", () => {
-  if (!overlay || !firstCard) return;
+  const overlay = document.getElementById("bg-overlay");
+  if (!overlay) return;
 
   const scrollY = window.scrollY;
-  const viewportHeight = window.innerHeight;
+  const maxScroll = document.body.scrollHeight - window.innerHeight;
+  const progress = Math.min(scrollY / maxScroll, 1);
 
-  // Ponto fixo do topo do roxo (meio do primeiro card)
-  const cardMiddle = firstCard.offsetTop + firstCard.offsetHeight / 2;
-  const fixedTopPercent = (cardMiddle / viewportHeight) * 100;
+  const startPercent = 65;     // ponto inicial do roxo
+  const transitionHeight = 15; // altura da transição em %
 
-  // Faz o gradiente subir com o scroll, mas mantendo o topo visual fixo
-  const progress = Math.min(scrollY / viewportHeight, 1); // valor 0 a 1
-  const start = fixedTopPercent - fixedTopPercent * progress; 
-  const transitionHeight = 20; // altura do roxo sólido
-  const end = Math.min(start + transitionHeight, 100);
+  // Calcula o topo e o fundo da transição
+  const purpleStart = startPercent - startPercent * progress;
+  const transitionStart = purpleStart;
+  const transitionEnd = Math.min(purpleStart + transitionHeight, 100);
+  
+  // Mantém a mesma proporção na parte de baixo
+  const bottomStart = 100 - (100 - transitionEnd);
+  const bottomEnd = 100; // sempre até 100%
 
   overlay.style.background = `
     linear-gradient(to bottom,
-      rgba(0,0,0,0) 0%,
-      rgba(48,0,72,0.0) ${start}%,
-      rgba(48,0,72,0.85) ${end}%,
-      rgba(48,0,72,0.85) 100%
+      rgba(0,0,0,0) 0%,                  /* topo transparente */
+      rgba(48,0,72,0.0) ${transitionStart}%, /* transição topo */
+      rgba(48,0,72,1) ${transitionEnd}%,     /* roxo sólido topo */
+      rgba(48,0,72,1) ${bottomStart}%,       /* roxo sólido fundo proporcional */
+      rgba(48,0,72,1) ${bottomEnd}%          /* fundo sólido */
     )
   `;
 
