--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,11 @@ background-color: rgba(75, 0, 130, 0.35);  border-radius: 0;
   </style>
 </head>
 <body>
-
+<video id="bg-video" autoplay muted loop playsinline preload="auto"
+       poster="https://i.pinimg.com/736x/73/06/c1/7306c1bb2c477ac042098cbf4962f8d1.jpg">
+  <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+</video>
+<div id="bg-overlay"></div>
 
 
 <!-- Página do Episódio -->
