--- a/index.html
+++ b/index.html
@@ -8,41 +8,16 @@
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/Picsart_25-07-09_14-16-08-080_LE_upscale_balanced_x4_light_ai_30_tone_enhance_30_color_enhance_30 (1).webp">
 <link rel="preload" as="image" href="https://cdn.jsdelivr.net/gh/patounic/patounic@latest/imagem/wallpaper.png.webp">
   <style>
-/* Vídeo de fundo em tela cheia */
-#bg-video {
-  position: fixed;
-  inset: 0;
+
+
+#bg-video, #bg-overlay {
+  position: absolute; /* agora só dentro da primeira página */
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
-  filter: brightness(0.55);
 }
-
-/* Overlay que escurece e fica roxo ao descer */
-#bg-overlay {
-  position: fixed;
-  inset: 0;
-  pointer-events: none;
-  z-index: 0;
-
-  background: linear-gradient(to bottom,
-    rgba(0,0,0,0) 0%,                  /* topo transparente */
-    rgba(0,0,0,0) 75%,                 /* até 75% nada */
-    rgba(48,0,72,0.0) 75%,             /* começa a transição */
-    rgba(48,0,72,0.8) 85%,             /* em 85% já chegou no roxo */
-    rgba(48,0,72,0.8) 100%             /* últimos 15% roxo sólido */
-  );
-
-  backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-}
-
-
-
-
-
-
 
 /* Garante que os contêineres principais fiquem acima do vídeo e sem fundos antigos */
 #site-content, #episodio-page, #login-container, #register-container{
@@ -854,6 +829,7 @@ html, body {
     body {
       margin: 0;
       padding: 0;
+background-color: rgb(30, 0, 50); /* roxo mais escuro */
 
     }
 
@@ -1191,7 +1167,6 @@ background-color: rgba(75, 0, 130, 0.35);  border-radius: 0;
   <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
 </video>
 <div id="bg-overlay"></div>
-
 
 <!-- Página do Episódio -->
 <div id="episodio-page" style="display:none; padding:20px; text-align:center;">
@@ -2843,33 +2818,8 @@ window.addEventListener("scroll", () => {
   } else {
     topBar.classList.remove("scrolled");
   }
-
-  const overlay = document.getElementById("bg-overlay");
-  if (!overlay) return;
-
-  const scrollY = window.scrollY;
-  const maxScroll = document.body.scrollHeight - window.innerHeight;
-  const progress = Math.min(scrollY / maxScroll, 1);
-
-  const startPercent = 75;     // ponto inicial do roxo
-  const transitionHeight = 15; // altura da transição em % (mais suave)
-  
-  // Posição onde começa o roxo sólido
-  const purpleStart = startPercent - startPercent * progress;
-  const transitionStart = purpleStart;
-  const transitionEnd = Math.min(purpleStart + transitionHeight, 100);
-
-  overlay.style.background = `
-    linear-gradient(to bottom,
-      rgba(0,0,0,0) 0%,                  /* topo transparente */
-      rgba(48,0,72,0.0) ${transitionStart}%, /* começa a transição */
-      rgba(48,0,72,1) ${transitionEnd}%,     /* roxo sólido escuro */
-      rgba(48,0,72,1) 100%)
-  `;
-
-  overlay.style.backdropFilter = "blur(4px)";
-  overlay.style.webkitBackdropFilter = "blur(4px)";
 });
+
 
 
 // expõe globalmente
